# Infinitas

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: cross-platform.yml
compiler/: CMakeLists.txt
compiler/src/: compiler.cpp  (+3 more)
debian/: README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  infinitas.cron.d.ex  infinitas.doc-base.ex  install  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
examples/: helloworld.i
infinitas/: CMakeLists.txt
lexer/: CMakeLists.txt
parser/: CMakeLists.txt
parser/include/parser/: exception_syntax.h  parser.h
parser/include/parser/nodes/: base_node.h  binary_operation_node.h  block_node.h  error_node.h  float_node.h  function_call_node.h  grouping_node.h  integer_node.h  nodes.h  string_node.h  unary_node.h  variable_nodes.h
parser/src/: exception_syntax.cpp  parser.cpp
parser/src/nodes/: base_node.cpp  binary_operation_node.cpp  block_node.cpp  error_node.cpp  float_node.cpp  grouping_node.cpp  integer_node.cpp  print_node.cpp  string_node.cpp  unary_node.cpp  variable_nodes.cpp
shared/: CMakeLists.txt
shared/include/shared/: constant_pool.h  error_context.h  exception.h  instruction_container.h  logger.h  object_visitors.h  opcodes.h  token.h  useful.h
shared/include/shared/objects/: all.h  base_object.h
shared/src/: constant_pool.cpp  exception.cpp  instruction_container.cpp
shared/src/objects/: base_object.cpp
tests/: CMakeLists.txt  lexer.cpp  parser.cpp
virtual-machine/: CMakeLists.txt
virtual-machine/details/virtual-machine/: execution_dispatcher.h  stack_container.h
virtual-machine/include/virtual-machine/: environment.h  exception_runtime.h  virtual_machine.h
virtual-machine/include/virtual-machine/executor_cases/: all.h  arithmetic.h  block.h  exec_utils.h  native.h  type_conversion.h  unary.h  variable.h
virtual-machine/src/: environment.cpp  exception_runtime.cpp  execution_dispatcher.cpp  register.h  stack_container.cpp  virtual_machine.cpp
virtual-machine/src/executor_cases/: arithmetic.cpp  block.cpp  exec_utils.cpp  native.cpp  type_conversion.cpp  unary.cpp  variable.cpp
(+30 files in other folders)
